force-app/main/default/objects/Account_Contact_Role__c/Account_Contact_Role__c.object-meta.xml
<CustomObject>
    <fullName>Account_Contact_Role__c</fullName>
    <label>Account Contact Role</label>
    <pluralLabel>Account Contact Roles</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
        <displayFormat/>
    </nameField>
    <description>Custom object to link Contacts with a role for a specific Account</description>
    <household>false</household>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>