force-app/main/default/objects/Account_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Primary Contact</fullName><default>true</default><label>Primary Contact</label></value>
            <value><fullName>Authorized Signer</fullName><default>false</default><label>Authorized Signer</label></value>
            <value><fullName>Contact</fullName><default>false</default><label>Contact</label></value>
            <value><fullName>Emergency Contact</fullName><default>false</default><label>Emergency Contact</label></value>
            <value><fullName>Accounts Payable</fullName><default>false</default><label>Accounts Payable</label></value>
            <value><fullName>Accounts Receivable</fullName><default>false</default><label>Accounts Receivable</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>